--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,23 @@
-# Compiled Object files, Static and Dynamic libs (Shared Objects)
+# Binaries for programs and plugins
+*.exe
+*.dll
+*.so
+*.dylib
 *.o
 *.a
-*.so
 
 # Folders
-_obj
-_test
+.DS_Store
 
-# Architecture specific extensions/prefixes
-*.[568vq]
-[568vq].out
-
-*.cgo1.go
-*.cgo2.c
-_cgo_defun.c
-_cgo_gotypes.go
-_cgo_export.*
-
-_testmain.go
-
-*.exe
+# Test binary, build with `go test -c`
 *.test
-*.prof
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
+.glide/
+
+# IntelliJ
+.idea
+*.iml
